adding custom server

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
         <todo-view></todo-view>
         <connected-element></connected-element>
         <mutation-element></mutation-element>
+        <add-agent-element></add-agent-element>
       </main>
     <script src="./vendor/webcomponents-loader.js"></script>
   </body>
